[FIX] documents: make chatter flex in Documents app
The chatter in documents was not flex, which made it take a lot
of space without any wrapping. As a result, usually chatter took
all the screen and content was massively overflowing, resulting
in poor UX.

This was caused by a specific stylerule in documents with chatter
that made sense in a earlier version of chatter CSS, but this
is no longer needed.

Also we actually want to reuse most style of chatter in form view.
This commit adds `o-mail-ChatterContainer` classname on same
HTML node as `o-mail-Form-Chatter` and adapts style, so that
Document can set this classname to reuse style.

opw-3681435

closes odoo/enterprise#60772

Related: odoo/odoo#161940

--- a/documents/static/src/views/inspector/documents_inspector.scss
+++ b/documents/static/src/views/inspector/documents_inspector.scss
@@ -395,10 +395,7 @@
 }
 
 .o_document_chatter_container {
-    display: block;
-    position: relative;
-    overflow: auto;
-    flex: 0 0 auto;
+    --Chatter-asideExtraWidth: 35px;
     background-color: $o-webclient-background-color;
 
     --ChatterTopbar-padding-right: calc(#{$o-horizontal-padding});
